--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://meyeroliver.github.io/mey-tutor-v2",
+  "homepage": "https://meytutor.co.za",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
